--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
